--- a/css/setting.css
+++ b/css/setting.css
@@ -74,7 +74,7 @@
     transform: rotate(30deg);
   }
   
-  #closenameForm {
+  #closeNameForm {
     position: absolute;
     top: 10px;
     right: 15px;
@@ -86,7 +86,7 @@
     z-index: 1100;
   }
   
-  #closenameForm:hover {
+  #closeNameForm:hover {
     color: #ff4d4d;
     transform: rotate(90deg); /* تأثير صغير لما نمرر عليه */
   }
